Add profile page (username + avatar URL) and change password

--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -7,5 +7,6 @@
     <a href="/search.html">Search</a>
     <a href="/collection.html">Collection</a>
     <a href="/wishlist.html">Wishlist</a>
+    <a href="/profile.html">Profile</a>
   </div>
 </div>
