Wire card details add buttons via inventory modal

--- a/public/views/card.html
+++ b/public/views/card.html
@@ -55,7 +55,8 @@
 
     <script src="/scripts/util.js"></script>
     <script src="/scripts/auth.js"></script>
-    <script src="/scripts/card.js"></script>
+    <script src="/scripts/inventoryModal.js" defer></script>
+    <script src="/scripts/card.js" defer></script>
 </body>
 
 </html>
