Card details: inline add-to-collection/wishlist form (no modal)

--- a/public/views/card.html
+++ b/public/views/card.html
@@ -15,6 +15,7 @@
     </div>
 
     <div class="container">
+        <div id="toast-container" class="toast-container"></div>
         <main class="card-page">
             <section class="card-media">
                 <img id="card-image" alt="Card Image" />
@@ -46,7 +47,7 @@
                 </div>
             </section>
 
-            <section class="card-actions">
+            <section class="card-actions" id="card-actions">
                 <button id="add-to-collection">+ Collection</button>
                 <button id="add-to-wishlist">+ Wishlist</button>
             </section>
@@ -55,7 +56,6 @@
 
     <script src="/scripts/util.js"></script>
     <script src="/scripts/auth.js"></script>
-    <script src="/scripts/inventoryModal.js" defer></script>
     <script src="/scripts/card.js" defer></script>
 </body>
 
