--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,12 +7,13 @@
   <title>TCG Exchange</title>
   <link rel="stylesheet" href="/styles/base.css" />
   <link rel="stylesheet" href="/styles/login.css" />
+  <link rel="stylesheet" href="/styles/nav.css" />
 </head>
 
 <body>
-  <div class="container">
-    <div id="theme" class="toggle"></div>
+  <div id="header"></div>
 
+  <div class="container">
     <h1>🎴 TCG Exchange</h1>
 
     <form id="loginForm">
@@ -24,8 +25,9 @@
     <a class="small-link" href="/register.html">First time? Create a user!</a>
   </div>
 
-  <script src="/scripts/login.js" defer></script>
   <script src="/scripts/util.js" defer></script>
+  <script src="/scripts/nav.js" defer></script>
+  <script src="/scripts/login.js" defer></script>
 </body>
 
 </html>
