--- a/public/views/wishlist.html
+++ b/public/views/wishlist.html
@@ -12,13 +12,7 @@
 </head>
 
 <body>
-  <div class="header">
-    <div style="display:flex; gap:.5rem; align-items:center;">
-      <div id="nav"></div>
-      <div id="theme" class="toggle"></div>
-    </div>
-    <button id="logout-btn">Log Out</button>
-  </div>
+  <div id="header"></div>
 
   <div class="container">
     <h1>My Wishlist</h1>
