--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -7,6 +7,7 @@
     <a href="/search.html">Search</a>
     <a href="/collection.html">Collection</a>
     <a href="/wishlist.html">Wishlist</a>
+    <a href="/trades.html">Trades</a>
     <a href="/profile.html">Profile</a>
   </div>
 </div>
