Card details: replace TCGplayer link with Collectr query link

--- a/public/views/card.html
+++ b/public/views/card.html
@@ -44,7 +44,7 @@
                     <!-- Price info goes here -->
                 </div>
                 <p style="margin-top:.75rem;">
-                    <a id="tcgplayer-link" href="#" target="_blank" rel="noopener noreferrer">View on TCGplayer</a>
+                    <a id="collectr-link" href="#" target="_blank" rel="noopener noreferrer">View on Collectr</a>
                 </p>
             </section>
 
