--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -31,6 +31,19 @@ body {
     transition: background 0.3s, color 0.3s;
 }
 
+a {
+    color: var(--highlight);
+    text-decoration: none;
+}
+
+a:visited {
+    color: var(--highlight);
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 h1 {
     text-align: center;
     font-size: 2rem;
