--- a/public/views/card.html
+++ b/public/views/card.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/base.css">
     <link rel="stylesheet" href="/styles/card.css">
     <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="/styles/ui.css" />
 </head>
 
 <body>
@@ -44,7 +45,7 @@
                     <!-- Price info goes here -->
                 </div>
                 <p style="margin-top:.75rem;">
-                    <a id="collectr-link" href="#" target="_blank" rel="noopener noreferrer">View on Collectr</a>
+                    <a id="collectr-link" class="link-chip" href="#" target="_blank" rel="noopener noreferrer">View on Collectr</a>
                 </p>
             </section>
 
