--- a/public/views/card.html
+++ b/public/views/card.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="/styles/card.css">
     <link rel="stylesheet" href="/styles/nav.css" />
     <link rel="stylesheet" href="/styles/ui.css" />
+    <link rel="stylesheet" href="/styles/modern-pages.css" />
 </head>
 
 <body>
     <div id="header"></div>
 
-    <div class="container">
+    <div class="container page">
         <div id="toast-container" class="toast-container"></div>
         <main class="card-page">
             <section class="card-media">
