--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -10,12 +10,14 @@
   <link rel="stylesheet" href="/styles/inventory.css" />
   <link rel="stylesheet" href="/styles/nav.css" />
   <link rel="stylesheet" href="/styles/profile.css" />
+  <link rel="stylesheet" href="/styles/ui.css" />
+  <link rel="stylesheet" href="/styles/modern-pages.css" />
 </head>
 
 <body>
   <div id="header"></div>
 
-  <div class="container">
+  <div class="container page">
     <div class="profile-wrap">
       <h1>Profile</h1>
       <div id="toast-container" class="toast-container"></div>
